// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioInput should be rendered correctly 1`] = `
<label
  className="container uui-checked root size-18 color-sky theme-light"
>
  <input
    aria-checked={true}
    checked={true}
    className="uui-radioinput"
    onChange={[Function]}
    tabIndex={0}
    type="radio"
  />
  <div
    className="container uui-icon uui-enabled circle"
    style={Object {}}
  >
    <svg
      className=""
      height={24}
      viewBox="0 0 12 24"
      width={12}
    >
      <use
        xlinkHref="#radio-point.svg"
      />
    </svg>
  </div>
</label>
`;

exports[`RadioInput should be rendered correctly with new props 1`] = `
<label
  className="container uui-checked root size-12 color-sun theme-dark"
>
  <input
    aria-checked={true}
    checked={true}
    className="uui-radioinput"
    onChange={[Function]}
    tabIndex={0}
    type="radio"
  />
  <div
    className="container uui-icon uui-enabled circle"
    style={Object {}}
  >
    <svg
      className=""
      height={24}
      viewBox="0 0 12 24"
      width={12}
    >
      <use
        xlinkHref="#radio-point.svg"
      />
    </svg>
  </div>
  <span
    className="uui-input-label"
    role="label"
  >
    open
  </span>
</label>
`;
